fixes some semantics around the word, public, in splinter

--- a/intro.tex
+++ b/intro.tex
@@ -78,7 +78,7 @@ than what the browser alone can provide.
 \subsubsection{Splinter: Practical, Private Web Application Queries}
 
 Many online services let users query datasets such as maps, flight prices, patents,
-and medical information. The datasets themselves do not contain sensitive information,
+and medical information. The datasets themselves do not contain sensitive user information,
 but unfortunately, users' queries on these datasets reveal highly
 sensitive information that can compromise users' privacy. 
 This paper presents Splinter, a system that protects users' queries and
