wraps up a bunch of changes. last change is to do the evaluation with olumofin

--- a/p.bib
+++ b/p.bib
@@ -1,3 +1,8 @@
+@Misc{decrease-aws,
+  author = {Amazon},
+  note = {\url{https://aws.amazon.com/blogs/aws/category/price-reduction/}}
+}
+
 @inproceedings{polaris,
   title={Polaris: Faster Page Loads Using Fine-grained Dependency Tracking.},
   author={Netravali, Ravi and Goyal, Ameesh and Mickens, James and Balakrishnan, Hari},
@@ -381,7 +386,7 @@
   year={2015}
 }
 
-@incollection{tnr,
+@inproceedings{tnr,
   title={{Transit node routing reconsidered}},
   author={Arz, Julian and Luxen, Dennis and Sanders, Peter},
   booktitle={Experimental Algorithms},
